--- a/Login.html
+++ b/Login.html
@@ -40,6 +40,7 @@
         text-align: center;
         padding: 20px 10px;
         width: 100%;
+        font-size: 30px;
     }
     #sifre{
         color: blue;
@@ -64,7 +65,9 @@
     }
 
     a{
-        color: black;     
+        color: black;  
+        font-size: 20px;
+
     }
     .kayitOl{
         width: 100%;
@@ -72,7 +75,12 @@
         padding: 20px;
 
     }
-
+    #kayit{
+        padding-right: 20px;
+    }
+    #sifreUnut{
+        padding-left: 20px;
+    }
 
 </style>
 
@@ -96,8 +104,8 @@
                     <input type="text" id="sifre" />
                 </div>
                 <div class="kayitOl">
-                    <a href="#" id="kayit">Kayıt ol</a>
-                    
+                    <a href="KayitOl.html" id="kayit">Kayıt ol</a>
+                    <span id="span"></span>
                     <a href="#" id="sifreUnut">Şifreni mi unuttun?</a>
                 </div>
                 <div class="butonlar">
