--- a/contact.html
+++ b/contact.html
@@ -94,10 +94,11 @@ p a:hover {
         
         <p class="ekip">Proje Ekibi İletişim Bilgileri:</p> 
         <p>
-        İbrahim Yegen: <a href="032090055@ogr.uludag.edu.tr">032090055@ogr.uludag.edu.tr</a> <br>
-        Ayetullah Bakan: <a href="032090046@ogr.uludag.edu.tr">032090046@ogr.uludag.edu.tr</a> <br>
-        Karahan Türker: <a href="032090039@ogr.uludag.edu.tr">032090039@ogr.uludag.edu.tr</a>
+            İbrahim Yegen: <a href="mailto:032090055@ogr.uludag.edu.tr">032090055@ogr.uludag.edu.tr</a> <br>
+            Ayetullah Bakan: <a href="mailto:032090046@ogr.uludag.edu.tr">032090046@ogr.uludag.edu.tr</a> <br>
+            Karahan Türker: <a href="mailto:032090039@ogr.uludag.edu.tr">032090039@ogr.uludag.edu.tr</a>
         </p>
+        
     </main>
     <footer>
         <p>&copy; 2023 Genetik Kod Projesi</p>
