login-page-updated

--- a/about.html
+++ b/about.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+
+
+    </style>
 </head>
 <header>
     <h1>Genetik Kod Şifreleme ve Çözme</h1>
@@ -19,5 +23,10 @@
 </header>
 <body>
     
+    <footer>
+        <p>&copy; 2023 Genetik Kod Projesi</p>
+    </footer>
+    
 </body>
+
 </html>
