Update-Some-InterfaceofUSers

--- a/Login1.html
+++ b/Login1.html
@@ -12,12 +12,12 @@
 
 <body>
     <div class="wrapper">
-        <header>Login Form</header>
+        <header>Login </header>
         <form action="#">
             <div class="field email">
                 <div class="input-area">
                     <input type="text" placeholder="Email Address">
-                    <i class="icon fas fa-envelope"></i>
+                    <i class="icon">✉️</i>
                     <i class="error error-icon fas fa-exclamation-circle"></i>
                 </div>
                 <div class="error error-txt">Email can't be blank</div>
@@ -25,7 +25,7 @@
             <div class="field password">
                 <div class="input-area">
                     <input type="password" placeholder="Password">
-                    <i class="icon fas fa-lock"></i>
+                    <i class="icon">🔒</i>
                     <i class="error error-icon fas fa-exclamation-circle"></i>
                 </div>
                 <div class="error error-txt">Password can't be blank</div>
