--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -11,7 +11,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: #00e6ee;
+            background: #007BFF;
             margin: 0;
         }
 
@@ -143,7 +143,7 @@
         }
 
         input[type="submit"]:hover {
-            background: #2c52ed;
+            background: #5372F0;
         }
     </style>
 </head>
