add-changes-login

--- a/main.html
+++ b/main.html
@@ -113,7 +113,7 @@ a:hover {
     <h1>Genetik Kod Şifreleme ve Çözme</h1>
     <nav>
         <ul>
-            <li><a href="index.html">Menu</a></li>
+            <li><a href="main.html">Ana Sayfa</a></li>
             <li><a href="encryption.html">Şifreleme</a></li>
             <li><a href="about.html">Hakkımızda</a></li>
             <li><a href="contact.html">İletişim</a></li>
@@ -126,9 +126,10 @@ a:hover {
     <div  class="main-image">
         <img src="gif.gif" alt="Genomik Veri Animasyonu">
     </div>
-    <footer>
-        <p>&copy; 2023 Genetik Kod Projesi</p>
-    </footer>
+    
 </body>
+<footer>
+    <p>&copy; 2023 Genetik Kod Projesi</p>
+</footer>
 
 </html>
