--- a/about.html
+++ b/about.html
@@ -19,32 +19,16 @@
 
 img {
     max-width: 100px;
-    border-radius: 50%;
-    margin-right: 20px;
+    border-radius: 65%;
+    margin-right: 30px;
 }
 
 .member-info {
     flex: 1;
 }
 
-a {
-    color: black;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-a:hover {
-    color: #fff; 
-}
-
-footer {
-    text-align: center;
-    padding: 10px;
-    background-color: #007BFF;
-    color: #fff;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+a:hover{
+    color: red;
 }
 
     </style>
@@ -54,7 +38,7 @@ footer {
     <nav>
         <ul>
             <li><a href="main.html">Ana Sayfa</a></li>
-            <li><a href="encryption.html">Şifreleme</a></li>
+            <li><a href="encryption.html">Proje</a></li>
             <li><a href="about.html">Hakkımızda</a></li>
             <li><a href="contact.html">İletişim</a></li>
         </ul>
@@ -65,21 +49,21 @@ footer {
 <body>
     
     <section class="team-member">
-        <img src="member1.jpg" alt="Ekip Üyesi 1">
+        <img src="1414.jpg" alt="İbrahim Yegen">
         <div class="member-info">
             <h2>İbrahim Yegen</h2>
             <p>Full Stack Developer</p>
-            <p>10 yıllık deneyime sahip. Web geliştirme konusunda uzmanlık alanları arasında JavaScript, Python ve React bulunuyor.</p>
+            <p>Yaptığı Çalışmalar Yazılacak</p>
             <a href="https://www.linkedin.com/in/ibrahimyegen/" target="_blank">LinkedIn Profili</a>
+
         </div>
     </section>
-
     <section class="team-member">
         <img src="member2.jpg" alt="Ekip Üyesi 2">
         <div class="member-info">
             <h2>Karahan Türker</h2>
             <p>UI-UX Designer</p>
-            <p>5 yıl tasarım deneyimi. Kullanıcı deneyimi ve kullanıcı arayüzü konusunda uzmanlaşmış, sürdürülebilir ve estetik tasarımlar oluşturuyor.</p>
+            <p>Yaptığı Çalışmalar Yazılacak</p>
             <a href="https://www.linkedin.com/in/karahantürker/" target="_blank">LinkedIn Profili</a>
         </div>
     </section>
@@ -89,10 +73,12 @@ footer {
         <div class="member-info">
             <h2>Ayetullah Bakan</h2>
             <p>.Net Developer</p>
-            <p>Proje yönetimi konusunda 7 yıllık deneyime sahip. Takım koordinasyonu ve proje planlaması konusunda uzman.</p>
+            <p>Yaptığı Çalışmalar Yazılacak.</p>
             <a href="https://www.linkedin.com/in/ayetullahbakan/" target="_blank">LinkedIn Profili</a>
         </div>
     </section>
+
+   
     
 </body>
 <footer>
