--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@ textarea:focus {
     <nav>
         <ul>
             <li><a href="main.html">Ana Sayfa</a></li>
-            <li><a href="encryption.html">Şifreleme</a></li>
+            <li><a href="encryption.html">Proje</a></li>
             <li><a href="about.html">Hakkımızda</a></li>
             <li><a href="contact.html">İletişim</a></li>
         </ul>
