--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
     <nav>
         <ul>
             <li><a href="main.html">Ana Sayfa</a></li>
-            <li><a href="encryption.html">Şifreleme</a></li>
+            <li><a href="encryption.html">Proje</a></li>
             <li><a href="about.html">Hakkımızda</a></li>
             <li><a href="contact.html">İletişim</a></li>
         </ul>
