message-icon-changed

--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@ textarea:focus {
        
         <div class="container">
             <div class="left-panel">
-                <img src="mailbox.jpg">
+                <img src="message.png">
             </div>
             <div class="right-panel">
                 <h2>Contact Us</h2>
