--- a/about.html
+++ b/about.html
@@ -28,7 +28,6 @@ img {
 }
 
 
-
     </style>
 </head>
 
@@ -43,6 +42,7 @@ img {
                 <li><a href="encryption.html">Proje</a></li>
                 <li><a href="about.html">Hakkımızda</a></li>
                 <li><a href="contact.html">İletişim</a></li>
+                <li><a href="newLogin.html">Login</a></li>
             </ul>
         </nav>
     </header>
