--- a/encryption.html
+++ b/encryption.html
@@ -47,6 +47,7 @@
         .accordion:hover {
             background-color: #444;
         }
+       
     </style>
 </head>
 
@@ -59,6 +60,7 @@
                 <li><a href="encryption.html">Proje</a></li>
                 <li><a href="about.html">Hakkımızda</a></li>
                 <li><a href="contact.html">İletişim</a></li>
+                <li><a href="newLogin.html">Login</a></li>
             </ul>
         </nav>
     </header>
