--- a/main.html
+++ b/main.html
@@ -28,12 +28,9 @@ body{
     background-color: transparent;
 }
 
-a{
-    color: white;
-}
+
     </style>
 </head>
-
 
 <body class="transparent">    
     <header  class="transparent">
@@ -44,6 +41,7 @@ a{
                 <li><a href="encryption.html">Proje</a></li>
                 <li><a href="about.html">Hakkımızda</a></li>
                 <li><a href="contact.html">İletişim</a></li>
+                <li><a href="newLogin.html">Login</a></li>
             </ul>
         </nav>
         <div  class="main-image">
