--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,6 @@ textarea:focus {
 
 
 
-
 </style>
 
 <body>
@@ -110,6 +109,7 @@ textarea:focus {
                 <li><a href="encryption.html">Proje</a></li>
                 <li><a href="about.html">Hakkımızda</a></li>
                 <li><a href="contact.html">İletişim</a></li>
+                <li><a href="newLogin.html">Login</a></li>
             </ul>
         </nav>
     </header>
