--- a/signUp.html
+++ b/signUp.html
@@ -1,45 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
-    <link rel="stylesheet" href="style2.css">
-    <style>
-       
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        .input-area .icon {
-            position: absolute;
-            top: 50%;
-            font-size: 18px;
-            pointer-events: none;
-            transform: translateY(-50%);
-        }
-
-    </style>
-</head>
-<body>
-    <div class="wrapper">
-        <header>Sign Up</header>
-        <form>
-            <div class="field">
-                <div class="input-area">
-                    <input type="email" placeholder="Email">
-                    <i class="icon">✉️</i>
-                </div>
+    <link rel="stylesheet" href="signup.css" />
+    <link rel="stylesheet" href="style3.css" />
+    <title>Sign up</title>
+  </head>
+  <body>
+    <main>
+      <div class="container">
+        <form action="" method="post">
+          <div class="card">
+            <a href="./login.html">
+              <img src="img/back-arrow.svg" alt="back" />
+            </a>
+            <h1>Sign up</h1>
+            <div class="label-float">
+              <input type="text" id="user" required />
+              <label for="user">Username</label>
+            </div>
+            <div class="label-float">
+              <input type="email" id="email" required />
+              <label for="email">Email</label>
+            </div>
+            <!-- <div class="label-float">
+              <input type="number" id="number" required />
+              <label for="number">Phone Number</label>
+            </div> -->
+            <div class="label-float">
+              <input type="password" id="password" required />
+              <label for="password">Password</label>
+            </div>
+            <div class="label-float">
+              <input type="password" id="password_confirm" onkeyup="verificar()" required />
+              <label for="password_confirm">Confirm Password</label>
             </div>
 
-            <div class="field">
-                <div class="input-area">
-                    <input type="password" placeholder="Password">
-                    <i class="icon">🔒</i>
-                </div>
+            <div class="justify">
+              <input type="submit" value="Sign up" />
             </div>
-
-            <div class="field">
-                <input type="submit" value="Sign Up">
+            <div class="sep">
+   
             </div>
+          </div>
         </form>
-    </div>
-</body>
+      </div>
+    </main>
+    <script src="script.js"></script>
+  </body>
 </html>
