about.html-changed

--- a/encryption.html
+++ b/encryption.html
@@ -47,6 +47,9 @@
         .accordion:hover {
             background-color: #444;
         }
+        ul li:hover {
+            transition: 0.7s;
+        }
        
     </style>
 </head>
@@ -60,7 +63,7 @@
                 <li><a href="encryption.html">Proje</a></li>
                 <li><a href="about.html">Hakkımızda</a></li>
                 <li><a href="contact.html">İletişim</a></li>
-                <li><a href="newLogin.html">Login</a></li>
+                <li><a href="login.html">Login</a></li>
             </ul>
         </nav>
     </header>
