--- a/main.html
+++ b/main.html
@@ -28,7 +28,6 @@ body{
     background-color: transparent;
 }
 
-
     </style>
 </head>
 
@@ -41,7 +40,7 @@ body{
                 <li><a href="encryption.html">Proje</a></li>
                 <li><a href="about.html">Hakkımızda</a></li>
                 <li><a href="contact.html">İletişim</a></li>
-                <li><a href="newLogin.html">Login</a></li>
+                <li><a href="login.html">Login</a></li>
             </ul>
         </nav>
         <div  class="main-image">
