--- a/HTML/team.html
+++ b/HTML/team.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <style>
     .team-member {
@@ -29,7 +29,7 @@ img {
 </style>
 <body>
     <section class="team-member">
-        <img src="1414.jpg" alt="İbrahim Yegen">
+        <img src="/IMAGE/1414.jpg" alt="İbrahim Yegen">
         <div class="member-info">
             <h2>İbrahim Yegen</h2>
             <p>Full Stack Developer</p>
