--- a/HTML/login.html
+++ b/HTML/login.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="style3.css" />
+    <link rel="stylesheet" href="/CSS/index.css" />
+    <link rel="stylesheet" href="/CSS/style3.css" />
     <title>Login</title>
   </head>
   <body>
@@ -22,7 +22,7 @@
             <div class="label-float">
               <input type="password" id="password" required/>
                 <label for="password">Password</label>
-                <img src="img/eye-regular.svg" id="passShow" alt="eyes">
+                <img src="/img/eye-regular.svg" id="passShow" alt="eyes">
             </div>
 
             <div class="justify">
@@ -31,7 +31,7 @@
             <div class="sep">
               <p>
                 Don't have an account
-                <a href="signUp.html">Sign up</a>
+                <a href="/HTML/signUp.html">Sign up</a>
               </p>
             </div>
           </div>
