--- a/HTML/main.html
+++ b/HTML/main.html
@@ -13,14 +13,14 @@
 
 <body class="transparent">    
     <header  class="transparent">
-        <h1>Genetik Kod Şifreleme ve Çözme</h1>
+        <h1 class="transparent">Genetik Kod Şifreleme ve Çözme</h1>
         <nav  class="transparent">
-            <ul>
-                <li><a href="/HTML/main.html">Ana Sayfa</a></li>
-                <li><a href="/HTML/encryption.html">Proje</a></li>
-                <li><a href="/HTML/about.html">Hakkımızda</a></li>
-                <li><a href="/HTML/contact.html">İletişim</a></li>
-                <li><a href="/HTML/login.html">Login</a></li>
+            <ul class="transparent">
+                <li><a class="transparent" href="/HTML/main.html">Ana Sayfa</a></li>
+                <li><a class="transparent" href="/HTML/encryption.html">Proje</a></li>
+                <li><a class="transparent" href="/HTML/about.html">Hakkımızda</a></li>
+                <li><a class="transparent"href="/HTML/contact.html">İletişim</a></li>
+                <li><a class="transparent"href="/HTML/login.html">Login</a></li>
             </ul>
         </nav>
         <div  class="main-image">
